02-connectivity-link.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: toystore
  namespace: toystore
spec:
  hostnames:
  - api.apps.cluster-nnnnn.nnnnn.sandboxBBB.nnnnnn.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: api-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: toystore
      port: 80
      weight: 1
    matches:
    - method: GET
      path:
        type: PathPrefix
        value: /toy
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: disable-mtls-namespace
  namespace: toystore
spec:
  host: '*.toystore.svc.cluster.local'
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    networking.istio.io/service-type: ClusterIP
  labels:
    kuadrant.io/gateway: "true"
  name: external
  namespace: api-gateway
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: api.apps.cluster-nnnnn.nnnnn.sandboxBBB.nnnnnn.com
    name: http
    port: 80
    protocol: HTTP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway-route
  namespace: api-gateway
spec:
  host: api.apps.cluster-nnnnn.nnnnn.sandboxBBB.nnnnnn.com
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: external-istio
    weight: 100
  wildcardPolicy: None
---
