03-keycloak-authentication.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    route.openshift.io/termination: edge
  labels:
    app: keycloak
  name: keycloak-ingress
  namespace: keycloak
spec:
  host: sso.apps.cluster-nnnnn.nnnnn.sandboxBBB.nnnnnn.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  wildcardPolicy: None
