04-keycloak-rbac-authorization.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: toystore
  namespace: toystore
spec:
  hostnames:
  - api.apps.cluster-nnnnn.nnnnn.sandboxBBB.nnnnnn.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: api-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: toystore
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /cars
  - backendRefs:
    - group: ""
      kind: Service
      name: toystore
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /toy
